--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
 		"react-datepicker": "^4.11.0",
 		"react-dom": "^16.8.4",
 		"react-polyfills": "0.0.1",
-		"react-router-dom": "^6.3.0"
+		"react-router-dom": "^6.3.0",
+		"react-scroll": "^1.8.9"
 	}
 }
