--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
 		"react-dom": "^16.8.4",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^6.3.0",
-		"react-scroll": "^1.8.9"
+		"react-scroll": "^1.8.9",
+		"simplescrollup": "^1.1.1"
 	}
 }
