--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
 		"react": "^16.8.4",
 		"react-datepicker": "^4.11.0",
 		"react-dom": "^16.8.4",
+		"react-hot-toast": "^2.4.1",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^6.3.0",
 		"react-scroll": "^1.8.9"
