--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 	"scripts": {
 		"start": "webpack-dev-server --config webpack.dev.js --port 3000",
 		"build": "webpack --config webpack.prod.js",
-		"prepare": "pip install flask && pip install -r src/requirements.txt && npm install && npm run build",
+		"prepare": "pip install -r src/requirements.txt && pip install flask && npm install && npm run build",
 		"server": "python src/app.py"
 	},
 	"author": {
