--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 	"scripts": {
 		"start": "webpack-dev-server --config webpack.dev.js --port 3000",
 		"build": "webpack --config webpack.prod.js",
-		"prepare": "pip install flask && pip install flask_admin && pip install flask_cors && pip install flask_jwt_extended && pip install flask_migrate && pip install flask_sqlalchemy && pip install flask_swagger",
+		"prepare": "pip install flask && pip install flask_admin && pip install flask_cors && pip install flask_jwt_extended && pip install flask_migrate && pip install flask_sqlalchemy && pip install flask_swagger && pip install psycopg2",
 		"server": "python src/app.py"
 	},
 	"author": {
